fixed alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,7 @@
   padding: 1rem;
   height: 2.25em;
 }
+
+.header {
+  text-align: center;
+}
